index.htmlなどの静的ファイルを配置しました。

--- a/public/test.html
+++ b/public/test.html
@@ -2,19 +2,23 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>Welcome</title>
+	<title>Test section</title>
 </head>
 <body>
 	<h1><a href="index.html" style="text-decoration: none; color: inhabit;">ｵﾙﾒｪｵﾁｬﾝのﾎｰﾑﾍﾟｰｼﾞﾀﾞﾒﾛｯ</a></h1>
 	<nav>
 		<p>Menu</p>
 		<ul style="display: flex; gap: 2rem;">
-			<li><a href="test.html">test</a></li>
-			<li><a href="#">Text</a></li>
-			<li><a href="#">Text</a></li>
+			<li><a href="test.html"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
 		</ul>
 	</nav>
 	<h3>このWebサイトはC++で構築されたサーバーから配信されています。</h3>
-	
+	<main>
+		<section>
+			<h3 class="sectiontitle">This is section title.</h3>
+		</section>
+	</main>
 </body>
 </html>
